test/expected/cli/shitbox_find.out
--- find all ---
.
./a
./a/b
./a/b/c
./a/b/c/three.txt
./a/b/two.log
./a/one.txt
--- find -name *.txt ---
./a/b/c/three.txt
./a/one.txt
--- find -type d ---
.
./a
./a/b
./a/b/c
--- find -maxdepth 1 ---
.
./a
--- find -mindepth 3 -type f ---
./a/b/c/three.txt
./a/b/two.log
--- find a named root ---
a/b
a/b/c
a/b/c/three.txt
a/b/two.log
--- find unknown predicate ---
shit: 1:1: error: find: unknown predicate '-bogus'.
     1 |  shitbox find . -bogus
       |  ^~~~~~~~~~~~~~~~~~~~~ here.
--- find missing -name argument ---
shit: 1:1: error: find: -name expects a pattern.
     1 |  shitbox find . -name
       |  ^~~~~~~~~~~~~~~~~~~~ here.
note: Pass a glob after `-name`, e.g. `-name '*.c'`.
